# proto

./: .clang-format  CMakeLists.txt  README.md
Base/: CMakeLists.txt  pch.cc  pch.hh
Base/Core/: BaseApp.cc  BaseApp.hh  InputManager.cc  InputManager.hh  InputVars.hh  Window.cc  Window.hh
Base/Graphics/: Camera3D.cc  Camera3D.hh  D3D.hh  Type.hh
Base/Graphics/D3D11/: D3D11API.cc  D3D11API.hh  D3D11APIStateManager.cc  D3D11APIStateManager.hh  D3D11RenderBuffer.cc  D3D11RenderBuffer.hh  D3D11Shader.cc  D3D11Shader.hh  D3D11SwapChain.cc  D3D11SwapChain.hh  D3D11Texture.cc  D3D11Texture.hh  InputLayout.cc  InputLayout.hh  RenderTargetView.cc  RenderTargetView.hh
Base/IO/: BufferStream.cc  BufferStream.hh  FileStream.cc  FileStream.hh
Base/Scripting/: ffd.cc  ffd.hh
Base/Scripting/ffd/: ffd.lexer.cc  ffd.lexer.hh  ffd.skeleton.cc  ffd.skeleton.hh  generate.bat  parser.y  sample_data.ffd  scanner.l
Base/UI/: ImGuiHandler.cc  ImGuiHandler.hh
Base/Utils/: BitFlags.hh  Format.hh  Hash.hh  Logger.hh  Math.hh  Random.hh  StringUtils.cc  StringUtils.hh  Timer.hh
Impl/: CMakeLists.txt
Impl/Atmosphere/: App.cc  App.hh  CMakeLists.txt  main.cc
Resources/Shaders/Atmos/: Common.hlsl  Final.hlsl  LUT.hlsl  MultiScatter.hlsl  Transmittance.hlsl
Resources/Shaders/Common/: imgui.hlsl
